src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/with-maybe-sized.stderr
error: `?const` and `?` are mutually exclusive
  --> $DIR/with-maybe-sized.rs:4:13
   |
LL | struct S<T: ?const ?Sized>(std::marker::PhantomData<T>);
   |             ^^^^^^^^^^^^^

error: aborting due to previous error

